# construction-Crack-segmentation

./: .gitignore  PROJECT_LOG.md  README.md  download_cracks.py  download_data.py  implementation_plan.md  pyproject.toml  requirements.txt  run_inference.py  streamlit_app.py  train_model.py
configs/: default.yaml
src/: __init__.py  config.py  dataset.py  evaluate.py  inference.py  metrics.py  model.py  process.py  train.py
